testsuite/tests/rename/should_fail/rnfail011.hs

type A = Int

type B = Bool

type A = [Bool]
