testsuite/tests/rename/should_fail/rnfail011.stderr
rnfail011.hs:2:1: error: [GHC-29916] Multiple declarations of ‘A’
    At: rnfail011.hs:2:1-12
        rnfail011.hs:6:1-15

